--- a/billing/templates/billing/invoice_detail.html
+++ b/billing/templates/billing/invoice_detail.html
@@ -192,7 +192,7 @@
             <div class="clear"></div>
         </div>
         <div id="actions">
-            <a href="{% url 'billing:invoice_list' invoice.service.id %}" class="button default">{% trans "Back to Client Area" %}</a>
+            <a href="{% url 'billing:invoice_list' %}" class="button default">{% trans "Back to Client Area" %}</a>
 {#            <a href="#" class="button default">{% trans "Download" %}</a>#}
             {# TODO: Downloadable version of the Invoice #}
         </div>
