--- a/billing/templates/billing/payment_mean_list.html
+++ b/billing/templates/billing/payment_mean_list.html
@@ -2,7 +2,7 @@
 {% load i18n humanize staticfiles auth_tokens %}
 
 {% block page_title %}
-<title>{% trans "Products" %} - {{ service.project_name }}</title>
+<title>{% trans "Payment means" %} - {{ service.project_name }}</title>
 {% endblock %}
 
 {% block head_style %}
