--- a/accesscontrol/templates/accesscontrol/events/access_granted.html
+++ b/accesscontrol/templates/accesscontrol/events/access_granted.html
@@ -10,7 +10,7 @@
         <div class="member" style="border-bottom: none; padding: 15px 0">
             {% if rq.member.photo and rq.member.photo.name %}
                 <a href="{% url 'ikwen:profile' rq.member.id %}" class="photo"
-                   style="background-image: url({{ rq.member.photo.small_url }}); cursor: pointer"></a>
+                   style="background-image: url({{ IKWEN_MEDIA_URL }}{{ rq.member.photo.small_name }}); cursor: pointer"></a>
             {% else %}
                 <a href="{% url 'ikwen:profile' rq.member.id %}" class="photo"
                    style="background-image: url({% static 'ikwen/img/login-avatar.jpg' %}); cursor: pointer"></a>
