--- a/accesscontrol/templates/accesscontrol/events/access_request.html
+++ b/accesscontrol/templates/accesscontrol/events/access_request.html
@@ -2,7 +2,7 @@
 <div class="col-xs-4 col-sm-3 notice-cnsl" style="text-align: center">
     <a href="{% url 'ikwen:profile' rq.member.id %}">
         {% if rq.member.photo and rq.member.photo.name %}
-            <div class="img" style="background-image: url({{ rq.member.photo.small_url }})"></div>
+            <div class="img" style="background-image: url({{ IKWEN_MEDIA_URL }}{{ rq.member.photo.small_name }})"></div>
         {% else %}
             <div class="img" style="background-image: url({% static 'ikwen/img/login-avatar.jpg' %})"></div>
         {% endif %}
