--- a/cashout/templates/cashout/payments.html
+++ b/cashout/templates/cashout/payments.html
@@ -23,6 +23,7 @@
         .payment-address .details p {margin-bottom: 0}
         ul.actions {margin-left: -138px}
         #confirm-cash-out .spinner {height: 35px; margin-top: -30px}
+        #show-addresses, .new-address {font-weight: 700; letter-spacing: 1px}
     </style>
 {% endblock %}
 
@@ -37,7 +38,7 @@
                 <div class="col-xs-12">
                     <h3>
                         <span>{% trans "Your balance" %}</span>
-                        <span style="float: right; font-size: 1.5em; font-weight: 400">{{ config.currency_symbol }} <span class="wallet-balance">{{ wallet.balance|intcomma|floatformat:"2" }}</span></span>
+                        <span style="float: right; font-size: 1.5em; font-weight: 400">{{ config.currency_symbol }} <span class="wallet-balance">{{ wallet.balance|floatformat:"2"|intcomma }}</span></span>
                     </h3>
                     <div class="row" style="margin-top: 4em">
                         <div class="col-sm-8 text-muted" style="margin-top: 1em">
@@ -49,15 +50,18 @@
                             {% endif %}
                         </div>
                         <div class="col-sm-4">
-                            {% if wallet.balance >= config.cash_out_min %}
+                        {% if wallet.balance > 0 %}
+                            {%if wallet.balance >= config.cash_out_min %}
                             <button id="show-addresses" class="btn btn-primary btn-sm pull-right"
                                     data-toggle="modal" data-target="#confirm-cash-out">{% trans "REQUEST A PAYMENT" %}</button>
                                 <p class="request-result alert alert-success" style="display: none">{% trans "Request successful" %}</p>
+                                <p class="request-result alert alert-danger" style="display: none">{% trans "Request successful" %}</p>
                             {% else %}
                                 <div class="text-muted" style="margin-top: 1em">
                                     {% trans "You can cash out as from" %} {{ config.currency_symbol }} {{ config.cash_out_min|intcomma }}
                                 </div>
                             {% endif %}
+                        {% endif %}
                         </div>
                     </div>
                 </div>
@@ -242,7 +246,6 @@
     {{ block.super }}
     <script type="text/javascript">
         (function() {
-            $('div#admin-nav .configuration').addClass('active');
             $('#addresses').on('click', '.new-address', function() {
                 $('#update-payment-address .modal-title').text("{% trans 'New payment address' %}");
                 $('#address-id').val('');
@@ -304,7 +307,9 @@
                         $('#show-addresses, #confirm-cash-out .spinner').hide();
                         $('#confirm-cash-out').modal('hide');
                         $('.wallet-balance').text(0);
-                        $('.request-result').show();
+                        $('.request-result.alert-success').show();
+                    } else {
+                        $('.request-result.alert-danger').text(resp.error).show();
                     }
                 })
             })
