--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -1,8 +1,16 @@
 {% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load humanize %}
-{% load staticfiles %}
-{% load auth_tokens %}
+{% load i18n humanize staticfiles auth_tokens %}
+{% block meta %}
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/apple-icon-180x180.png">
+    <link rel="shortcut icon" type="image/png" sizes="192x192" href="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/favicon-16x16.png">
+    <link rel="manifest" href="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{ settings.IKWEN_MEDIA_URL }}ikwen/favicons/{{ service.app.slug }}/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+{% endblock %}
 {% block head_style %}
     {{ block.super }}
     <link href="{% static 'ikwen/css/console.css' %}" media="screen" rel="stylesheet" type="text/css" />
@@ -88,7 +96,7 @@
                                         <a href="{{ configuration_url|append_auth_tokens:request }}">{% trans "Configuration" %}</a>
                                     </li>
                                     <li role="presentation" class="invoices">
-                                        {% url 'billing:invoice_list' service.id as invoice_list_url %}
+                                        {% url 'billing:invoice_list' as invoice_list_url %}
                                         <a href="{{ invoice_list_url|ikwenize|append_auth_tokens:request }}"
                                            target="_blank">{% trans 'Invoices' %}</a>
                                     </li>
@@ -132,8 +140,8 @@
 
 {% block footer %}
     <footer style="color: #999; font-size: 12px; margin-top: 45px; text-align: center">
-        &copy; {{ year }} <a href="{{ settings.IKWEN_BASE_URL|append_auth_tokens:request }}">{{ service.project_name }}</a>. {% trans "All rights reserved." %} -
-        <a href="{% url 'ikwen:legal_mentions' %}" style="text-decoration: underline">{% trans "Legal mentions" %}</a>
+        &copy; {{ year }} <a href="http://www.ikwen.com"><strong>ikwen</strong></a>. {% trans "All rights reserved." %} -
+        <a href="http://www.ikwen.com/legalMentions" style="text-decoration: underline">{% trans "Legal mentions" %}</a>
     </footer>
 {% endblock %}
 
