--- a/core/templates/core/configuration.html
+++ b/core/templates/core/configuration.html
@@ -7,7 +7,7 @@
 
 {% block head_style %}
     {{ block.super }}
-    <link href="{% static 'ajaxuploader/css/fileuploader.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{% static 'ikwen/ajaxuploader/css/fileuploader.css' %}" media="screen" rel="stylesheet" type="text/css" />
     <style>
         body {background: #f6f6f6}
         #context-search {clear: both; margin: 10px 0 6px 0;}
@@ -30,8 +30,7 @@
             {% if config.cover_image and config.cover_image.name %}
             <header id="cover" class="subtle-shade" style="background-image: url({{ settings.IKWEN_MEDIA_URL }}{{ config.cover_image.name }});">
             {% else %}
-                <header id="cover" class="subtle-shade"
-                        style="background-image: url({% static 'ikwen/img/default-cover-company.jpg' %});">
+                <header id="cover" class="subtle-shade" style="background-image: url({% static 'ikwen/img/default-cover-company.jpg' %});">
             {% endif %}
                 <div id="banner">
                     <div class="frame">
@@ -41,11 +40,10 @@
                             </div>
                         {% else %}
                             {# TODO: Company logo placeholder for service configuration #}
-                            <div class="photo" style="background-image: url({% static 'ikwen/img/login-avatar.jpg' %})">
+                            <div class="photo" style="background-image: url({% static 'ikwen/img/logo-placeholder.jpg' %})">
                                 <div class="upload-image"></div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                                         aria-valuemax="100">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                         <span class="sr-only"></span>
                                     </div>
                                 </div>
