--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -66,7 +66,7 @@
 }
 #stage .card {background: #fff;float: left;margin-top: 25px;overflow: hidden;padding: 15px;width: 100%;}
 #stage .card h3 {font-size: 16px;font-weight: 700;margin-top: 0;}
-#stage .card h3 a {color: #333;}
+#stage .card h3 a {color: #555;}
 #stage .card h3 img {margin-right: 6px}
 #stage .card > div:first-of-type h4 {margin: 0 0 .5em;}
 
@@ -87,16 +87,17 @@
     }
 }
 
-#stage .card:not(.loaded) .content {
+#stage .card .loading {
     background: #f5f5f5;
-    margin: 0;
-}
-
-#stage .card:not(.loaded) .content > div {
     color: #999;
     font-size: 60px;
     text-align: center;
+    margin: auto 15px;
+    min-height: 90px;
+    line-height: 90px;
 }
+
+#stage .card .loading .dots {float: left; margin-top: -15px; width: 100%;}
 
 .card-tile {background: no-repeat center; background-size: auto 100%; border: 1px solid #fff; float: left; overflow: hidden}
 .card-tile .more {background: rgba(0, 0, 0, .6);color: #fff;text-align: center;float: left;}
@@ -105,6 +106,10 @@
 .tile-2 {height: 100%; width: 50%}
 .tile-3-1 {height: 100%;width: 66%;}
 .tile-3-2 {height: 50%; width: 34%}
+.card-signature {border-top: 1px dashed #ddd; clear: both; margin-top: 5px; padding-top: 10px}
+.card-signature .photo {border-radius: 50%; float: left; overflow: hidden; width: 15%}
+.card-signature .member-info {float: left; padding-left: .8em; width: 84%}
+.card-signature .member-name {margin-top: 15px}
 #about ul {margin: 0; padding: 0}
 #about ul li {list-style-type: none; line-height: 25px}
 #about ul li label {width: 90px}
