Email regexp fixed in ikwen-utils.js

--- a/billing/templates/billing/invoice_detail.html
+++ b/billing/templates/billing/invoice_detail.html
@@ -94,7 +94,7 @@
                         <td class="col-sm-4">
                             <h4>{% trans "Pay To" %}</h4>
                             <div>
-                                {% if config.company_name %}<p>{{ config.company_name }}</p>{% endif %}
+                                {% if config.company_name %}<strong>{{ config.company_name }}</strong>{% endif %}
                                 {% if config.address %}<p>{{ config.address }}</p>{% endif %}
                                 {% if config.city %}<p>{{ config.city }}</p>{% endif %}
                                 {% if config.country %}<p>{{ config.country }}</p>{% endif %}
